# tdp-dev

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  Vagrantfile  ansible.cfg  docker-compose.yml  pyproject.toml  run-tdp-dev.sh  tdp_config.yml  vagrant.yml
ansible_collections/: requirements.yml
dev/: Dockerfile  docker-entrypoint.sh
firefox-container/: Dockerfile  docker-entrypoint.sh  krb5.conf  setup_for_tdp.sh
inventory/group_vars/: all.yml
inventory/topologies/: 01_tdp  02_extras  extras  observability  prerequisites
provision/playbooks/: all.yml  common.yml  system.yml  tdp-dev.yml  tdp_collections_config.yml  tdp_collections_init.yml  tdp_collections_install.yml  tdp_manager_config.yml  tdp_manager_init.yml  tdp_manager_install.yml  tdp_manager_start.yml
provision/roles/common/tasks/: main.yml
provision/roles/system/defaults/: main.yml
provision/roles/system/tasks/: disable_firewalld.yml  hosts.yml  main.yml  nodejs.yml  packages.yml
provision/roles/tdp_collections/defaults/: main.yml
provision/roles/tdp_collections/tasks/: config.yml  init.yml  install.yml
provision/roles/tdp_manager/defaults/: main.yml
provision/roles/tdp_manager/tasks/: config.yml  init.yml  install.yml  start.yml
provision/roles/tdp_manager/templates/: env_vars.j2  inventory.j2  tdp-server.service.j2  tdp-ui-config.j2
scripts/: download_releases.sh  tdp-release-uris.json  tdp-release-uris.txt  tdp-v2-release-uris.txt
tdp-dev-sync/: test-cluster-deployment.yml
tdp_vars_overrides/hbase/: hbase.yml
tdp_vars_overrides/hdfs/: hdfs.yml
tdp_vars_overrides/hive/: hive.yml
tdp_vars_overrides/jupyter/: jupyter.yml
tdp_vars_overrides/livy-spark3/: livy-spark3.yml
tdp_vars_overrides/ranger/: ranger.yml
tdp_vars_overrides/spark/: spark.yml
tdp_vars_overrides/spark3/: spark3.yml
tests/: conftest.py  pytest.ini  test_hbase.py  test_hdfs.py  test_hive.py  test_kerberos.py  test_knox.py  test_phoenix.py  test_phoenix_queryserver.py  test_spark.py  test_yarn.py
