[project]
name = "tdp-dev"
version = "0.1.0"
description = "tdp-dev dependencies"
authors = [{ name = "TOSIT" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.9.0,!=3.9.7,<4.0"
dependencies = [
    "tdp-lib[visualization,mysql,postgresql]",
    "passlib==1.7.4",
    "jmespath==1.0.1",
    "ansible-lint==6.17.2",
    "pytest-xdist==3.6.1",
    "pytest-testinfra==10.1.1",
]

[tool.uv]
# https://github.com/ansible/ansible-lint/issues/4348
environments = ["sys_platform != 'win32'"]

[tool.uv.sources]
tdp-lib = { path = "./tdp-lib", editable = true }

[project.urls]
Homepage = "https://github.com/TOSIT-FR/tdp-dev"
Repository = "https://github.com/TOSIT-FR/tdp-dev"
Documentation = "https://github.com/TOSIT-FR/tdp-dev"

[tool.setuptools]
py-modules = []
